k8s/petclinic/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spring-petclinic-gitops
  namespace: petclinic-qa
  labels:
    app: spring-petclinic-gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic-gitops
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spring-petclinic-gitops
    spec:
      containers:
        - name: spring-petclinic-git
          image: >-
            image-registry.openshift-image-registry.svc:5000/petclinic-cicd/spring-petclinic
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
